# arrow-tuning-system

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml  lint.yml  mobile-ci.yml  release.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  security.py
docker/: docker-compose.yml
docs/: api.md  architecture.md  deployment.md
edge/: README.md
examples/: analyze_shot.py
frontend/: .env.example  README.md  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts
ml-models/: README.md
mobile/: .env.example  README.md  analysis_options.yaml  pubspec.yaml
mobile/lib/: main.dart
vision/: README.md  __init__.py  pipeline.py
